--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="details">
             <div class="content">
                 <h2>DEAR SANJU JI<br><span>HAPPY BIRTHDAY</span></h2>
-                <p>Sanju ji puri ho dil ki har khawaish apki, aur mile khussiyo ka jaha apko sanji ji, jab agar aap mango asman ka ek tara, toh bhagwan ji dede apko sara asman. Yeh subh din apke jivan meh aye hajar bar aur mein apko uhi wish karte rahu bar bar ...bhagyamani hona jo acche chiz socha hai apne pura ho sab or devi devta sab hamesa apke sath rahe..... dukh, kast, rog, chinta kv na aye apko yahi hai pratna, janamdin ki hardik shubhkamaye SANJU JI.</p>
+                <p>Sanju ji puri ho dil ki har khawaish apki, aur mile khussiyo ka jaha apko sanju ji, jab agar aap mango asman ka ek tara, toh bhagwan ji dede apko sara asman. Yeh subh din apke jivan meh aye hajar bar aur mein apko uhi wish karte rahu bar bar ...bhagyamani hona jo acche chiz socha hai apne pura ho sab or devi devta sab hamesa apke sath rahe..... dukh, kast, rog, chinta kv na aye apko yahi hai pratna, janamdin ki hardik shubhkamaye SANJU JI.</p>
                 <h3>From Apki Anku</h3>
                 <!-- <button>Buy Now</button> -->
             </div>
